--- a/apply.html
+++ b/apply.html
@@ -1,270 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Apply for our open positions" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <title>Apply - CloudLabs</title>
-  </head>
 
-  <body>
-    <nav>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <meta name="description" content="Apply for our open positions" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  <title>Apply - CloudLabs</title>
+</head>
+
+<body>
+  <header>
+    <nav id="header-nav">
       <div class="logo">
         <p>logo</p>
       </div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#jobs">Jobs</a></li>
-        <li><a href="#news">Apply</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./job.html">Jobs</a></li>
+        <li><a href="./apply.html">Apply</a></li>
+        <li><a href="./about.html">About</a></li>
       </ul>
     </nav>
-    <main>
-      <h1>Apply for your dream job</h1>
-      <h2 class="unbold">
-        Fill out the form below to apply for one of our open positions!
-      </h2>
-      <br />
-      <!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
-      <form
-        method="post"
-        action="https://mercury.swin.edu.au/it000000/formtest.php"
-      >
-        <fieldset class="section">
-          <legend>📝 About the job</legend>
-          <label for="job_ref_no">Which job are you applying for?</label><br />
-          <input
-            type="text"
-            id="job_ref_no"
-            name="job_ref_no"
-            placeholder="Job reference number"
-            required
-            minlength="5"
-            maxlength="5"
-          />
+  </header>
+  <main class="apply-container">
+    <h1 class="apply-h1">Apply for your dream job</h1>
+    <h2 class="apply-h2">
+      Fill out the form below to apply for one of our open positions!
+    </h2>
+    <br />
+    <!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
+    <form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
+      <fieldset class="apply-section">
+        <legend>📝 About the job</legend>
+        <label class="apply-label" for="job_ref_no">Which job are you applying for?</label><br />
+        <input class= "apply-input" type="text" id="job_ref_no" name="job_ref_no" placeholder="Job reference number" required minlength="5"
+          maxlength="5" />
+      </fieldset>
+
+      <fieldset class="apply-section">
+        <legend>👋 Tell us about yourself</legend>
+        <table class="apply-table">
+          <tr>
+            <td class="apply-td"><label class="apply-label" for="first_name">First name</label></td>
+            <td class="apply-td"><label class="apply-label" for="last_name">Last name</label></td>
+          </tr>
+          <tr>
+            <td class="apply-td">
+              <input class= "apply-input" type="text" id="first_name" name="first_name" placeholder="John" required maxlength="20" />
+            </td>
+            <td class="apply-td">
+              <input class= "apply-input" type="text" id="last_name" name="last_name" placeholder="Doe" required maxlength="20" />
+            </td>
+          </tr>
+        </table>
+
+        <label class="apply-label" for="birth_date">Date of birth</label><br />
+        <input class= "apply-input" type="date" id="birth_date" name="birth_date" required />
+
+        <fieldset class="apply-gender-list">
+          <legend>Gender</legend>
+          <input class= "apply-input" type="radio" id="gender_male" name="gender" value="male" required />
+          <label class="apply-label" for="gender_male">Male</label><br />
+          <input class= "apply-input" type="radio" id="gender_female" name="gender" value="female" />
+          <label class="apply-label" for="gender_female">Female</label><br />
+          <input class= "apply-input" type="radio" id="gender_other" name="gender" value="other" />
+          <label class="apply-label" for="gender_other">Other</label>
         </fieldset>
 
-        <fieldset class="section">
-          <legend>👋 Tell us about yourself</legend>
-          <table>
-            <tr>
-              <td><label for="first_name">First name</label></td>
-              <td><label for="last_name">Last name</label></td>
-            </tr>
-            <tr>
-              <td>
-                <input
-                  type="text"
-                  id="first_name"
-                  name="first_name"
-                  placeholder="John"
-                  required
-                  maxlength="20"
-                />
-              </td>
-              <td>
-                <input
-                  type="text"
-                  id="last_name"
-                  name="last_name"
-                  placeholder="Doe"
-                  required
-                  maxlength="20"
-                />
-              </td>
-            </tr>
-          </table>
+        <table class="apply-table">
+          <tr>
+            <td class="apply-td"><label class="apply-label" for="address">Street address</label></td>
+            <td class="apply-td"><label class="apply-label" for="suburb">Suburb/town</label></td>
+          </tr>
+          <tr>
+            <td class="apply-td">
+              <input class= "apply-input" type="text" id="address" name="address" placeholder="1 John St" required maxlength="40" />
+            </td>
+            <td class="apply-td">
+              <input class= "apply-input" type="text" id="suburb" name="suburb" placeholder="Hawthorn" required maxlength="40" />
+            </td>
+          </tr>
+          <tr>
+            <td class="apply-td"><label class="apply-label" for="state">State</label></td>
+            <td class="apply-td"><label class="apply-label" for="postcode">Postcode</label></td>
+          </tr>
+          <tr>
+            <td class="apply-td">
+              <select class="apply-select" name="state" id="state" required>
+                <option value="" disabled selected>Select your state</option>
+                <option value="vic">VIC</option>
+                <option value="nsw">NSW</option>
+                <option value="qld">QLD</option>
+                <option value="nt">NT</option>
+                <option value="wa">WA</option>
+                <option value="sa">SA</option>
+                <option value="tas">TAS</option>
+                <option value="act">ACT</option>
+              </select>
+            </td>
+            <td class="apply-td">
+              <input class= "apply-input" type="text" id="postcode" name="postcode" placeholder="3122" required pattern="\d{4}"
+                maxlength="4" />
+            </td>
+          </tr>
+        </table>
 
-          <label for="birth_date">Date of birth</label><br />
-          <input type="date" id="birth_date" name="birth_date" required />
+        <label class="apply-label" for="email">Email</label><br />
+        <input class= "apply-input" type="email" id="email" name="email" placeholder="johndoe@example.com" required />
+        <br />
+        <label class="apply-label" for="phone">Phone number</label><br />
+        <input class= "apply-input" type="tel" id="phone" name="phone" placeholder="0412345678" minlength="8" maxlength="12" required />
+      </fieldset>
 
-          <fieldset id="gender_list">
-            <legend>Gender</legend>
-            <input
-              type="radio"
-              id="gender_male"
-              name="gender"
-              value="male"
-              required
-            />
-            <label for="gender_male">Male</label><br />
-            <input
-              type="radio"
-              id="gender_female"
-              name="gender"
-              value="female"
-            />
-            <label for="gender_female">Female</label><br />
-            <input type="radio" id="gender_other" name="gender" value="other" />
-            <label for="gender_other">Other</label>
-          </fieldset>
+      <fieldset class="apply-section">
+        <legend>🤔 Tell us about your skills</legend>
+        <input class= "apply-input" type="checkbox" id="skill1" name="skills[]" value="leadership" required />
+        <label class="apply-label" for="skill1">Leadership</label><br />
+        <input class= "apply-input" type="checkbox" id="skill2" name="skills[]" value="communication" />
+        <label class="apply-label" for="skill2">Communication</label><br />
+        <input class= "apply-input" type="checkbox" id="skill3" name="skills[]" value="decision_making" />
+        <label class="apply-label" for="skill3">Decision making</label><br />
+        <input class= "apply-input" type="checkbox" id="skill4" name="skills[]" value="management" />
+        <label class="apply-label" for="skill4">Management</label><br />
+        <input class= "apply-input" type="checkbox" id="skill5" name="skills[]" value="other" />
+        <label class="apply-label" for="skill5">Other skills...</label><br /><br />
 
-          <table>
-            <tr>
-              <td><label for="address">Street address</label></td>
-              <td><label for="suburb">Suburb/town</label></td>
-            </tr>
-            <tr>
-              <td>
-                <input
-                  type="text"
-                  id="address"
-                  name="address"
-                  placeholder="1 John St"
-                  required
-                  maxlength="40"
-                />
-              </td>
-              <td>
-                <input
-                  type="text"
-                  id="suburb"
-                  name="suburb"
-                  placeholder="Hawthorn"
-                  required
-                  maxlength="40"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td><label for="state">State</label></td>
-              <td><label for="postcode">Postcode</label></td>
-            </tr>
-            <tr>
-              <td>
-                <select name="state" id="state" required>
-                  <option value="" disabled selected>Select your state</option>
-                  <option value="vic">VIC</option>
-                  <option value="nsw">NSW</option>
-                  <option value="qld">QLD</option>
-                  <option value="nt">NT</option>
-                  <option value="wa">WA</option>
-                  <option value="sa">SA</option>
-                  <option value="tas">TAS</option>
-                  <option value="act">ACT</option>
-                </select>
-              </td>
-              <td>
-                <input
-                  type="text"
-                  id="postcode"
-                  name="postcode"
-                  placeholder="3122"
-                  required
-                  pattern="\d{4}"
-                  maxlength="4"
-                />
-              </td>
-            </tr>
-          </table>
+        <label class="apply-label" for="other_skills">Other skills</label><br />
 
-          <label for="email">Email</label><br />
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="johndoe@example.com"
-            required
-          />
-          <br />
-          <label for="phone">Phone number</label><br />
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder="0412345678"
-            minlength="8"
-            maxlength="12"
-            required
-          />
-        </fieldset>
-
-        <fieldset class="section">
-          <legend>🤔 Tell us about your skills</legend>
-          <input
-            type="checkbox"
-            id="skill1"
-            name="skills[]"
-            value="leadership"
-            required
-          />
-          <label for="skill1">Leadership</label><br />
-          <input
-            type="checkbox"
-            id="skill2"
-            name="skills[]"
-            value="communication"
-          />
-          <label for="skill2">Communication</label><br />
-          <input
-            type="checkbox"
-            id="skill3"
-            name="skills[]"
-            value="decision_making"
-          />
-          <label for="skill3">Decision making</label><br />
-          <input
-            type="checkbox"
-            id="skill4"
-            name="skills[]"
-            value="management"
-          />
-          <label for="skill4">Management</label><br />
-          <input type="checkbox" id="skill5" name="skills[]" value="other" />
-          <label for="skill5">Other skills...</label><br /><br />
-
-          <label for="other_skills">Other skills</label><br />
-
-          <textarea
-            id="other_skills"
-            name="other_skills"
-            rows="4"
-            cols="30"
-            placeholder="If you have any other skills not listed above, please list them here."
-          ></textarea>
-        </fieldset>
-        <input type="submit" value="Apply" />
-      </form>
-    </main>
-  </body>
-  <footer>
-    <div class="row">
-      <div class="col">
-        <img src="logo.png" class="logo" alt="logo" />
-        <p>
-          Our company provides details of "Chief Technology Officer(CTO)" and
-          "Cloud engineering", including base position, skills needed,
-          qualification and salary average per year in Australia.
-        </p>
-      </div>
-
-      <div class="col">
-        <h3>Officer</h3>
-        <p class="email-id">email : 104082552@student.swin.edu.au</p>
-        <p>phone number : +61 423032755</p>
-      </div>
-
-      <div class="col">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#jobs">Jobs</a></li>
-          <li><a href="#news">News</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#Links">Link reference</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <h3>Newsletter</h3>
-        <form>
-          <input type="email" placeholder="Enter Your email id" required />
-          <input type="submit" />
-        </form>
-      </div>
+        <textarea class="apply-textarea" id="other_skills" name="other_skills" rows="4" cols="30"
+          placeholder="If you have any other skills not listed above, please list them here."></textarea>
+      </fieldset>
+      <input class= "apply-input" type="submit" value="Apply" />
+    </form>
+  </main>
+</body>
+<footer>
+  <div class="row">
+    <div class="col">
+      <img src="logo.png" class="logo" alt="logo" />
+      <p>
+        Our company provides details of "Chief Technology Officer(CTO)" and
+        "Cloud engineering", including base position, skills needed,
+        qualification and salary average per year in Australia.
+      </p>
     </div>
-    <hr />
-    <p>Deadline is coming 2023 &copy - All Rights Reserved</p>
-  </footer>
+
+    <div class="col">
+      <h3>Officer</h3>
+      <p class="email-id">email : 104082552@student.swin.edu.au</p>
+      <p>phone number : +61 423032755</p>
+    </div>
+
+    <div class="col">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#jobs">Jobs</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#Links">Link reference</a></li>
+      </ul>
+    </div>
+    <div class="col">
+      <h3>Newsletter</h3>
+      <form>
+        <input type="email" placeholder="Enter Your email id" required />
+        <input type="submit" />
+      </form>
+    </div>
+  </div>
+  <hr />
+  <p>Deadline is coming 2023 &copy - All Rights Reserved</p>
+</footer>
 </html>
